--- a/trunk/mobitest-agent/Android/BZAgent/.classpath
+++ b/trunk/mobitest-agent/Android/BZAgent/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.1.1.jar"/>
+	<classpathentry kind="lib" exported="true" path="lib/httpmime-4.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
