--- a/mobitest-agent/Android/BZAgent/AndroidManifest.xml
+++ b/mobitest-agent/Android/BZAgent/AndroidManifest.xml
@@ -5,7 +5,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    
+    <uses-permission android:name="android.permission.FACTORY_TEST"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+
+    <uses-sdk android:targetSdkVersion="11" android:minSdkVersion="8"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/android_ico">
         <activity android:label="@string/app_name" android:name=".AgentActivity" android:screenOrientation="portrait">
             <intent-filter>
@@ -26,7 +30,4 @@
 		</intent-filter>
 	</activity>
 </application>
-<uses-permission android:name="android.permission.FACTORY_TEST"></uses-permission>
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-<uses-sdk android:targetSdkVersion="11"></uses-sdk>
 </manifest> 
