--- a/trunk/mobitest-agent/iOS/BZAgent/Settings.bundle/Root.plist
+++ b/trunk/mobitest-agent/iOS/BZAgent/Settings.bundle/Root.plist
@@ -16,7 +16,7 @@
 			<key>AutocorrectionType</key>
 			<string>No</string>
 			<key>DefaultValue</key>
-			<string>http://wpt.blaze.io/</string>
+			<string>http://your.wpt.server/</string>
 			<key>IsSecure</key>
 			<false/>
 			<key>Key</key>
