--- a/mobitest-agent/iOS/BZRecoverAgent/BZRecoverAgent/BZRecoverAgent-Info.plist
+++ b/mobitest-agent/iOS/BZRecoverAgent/BZRecoverAgent/BZRecoverAgent-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.blaze.BlazeiOSRecoverAgent</string>
+	<string>com.akamai.mobitest.BlazeiOSRecoverAgent</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -26,7 +26,7 @@
 	<array>
 		<dict>
 			<key>CFBundleURLName</key>
-			<string>com.blaze.RecoverAsgent</string>
+			<string>com.akamai.mobitest.BlazeiOSRecoverAgent</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>BlazeRecoverAgent</string>
